qt6/gen_qdatetimeedit.h

typedef struct QCalendar QCalendar;
typedef struct QCalendarWidget QCalendarWidget;
typedef struct QDate QDate;
typedef struct QDateTime QDateTime;
typedef struct QDateTimeEdit QDateTimeEdit;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QSize QSize;
typedef struct QTime QTime;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
QDateTimeEdit* QDateTimeEdit_new(QWidget* parent);
QDateTimeEdit* QDateTimeEdit_new2();
QDateTimeEdit* QDateTimeEdit_new3(QDateTime* dt);
QDateTimeEdit* QDateTimeEdit_new4(QDate* d);
QDateTimeEdit* QDateTimeEdit_new5(QTime* t);
QDateTimeEdit* QDateTimeEdit_new6(QDateTime* dt, QWidget* parent);
QDateTimeEdit* QDateTimeEdit_new7(QDate* d, QWidget* parent);
QDateTimeEdit* QDateTimeEdit_new8(QTime* t, QWidget* parent);
QMetaObject* QDateTimeEdit_metaObject(const QDateTimeEdit* self);
void* QDateTimeEdit_metacast(QDateTimeEdit* self, const char* param1);
int QDateTimeEdit_metacall(QDateTimeEdit* self, int param1, int param2, void** param3);
struct miqt_string QDateTimeEdit_tr(const char* s);
QDateTime* QDateTimeEdit_dateTime(const QDateTimeEdit* self);
QDate* QDateTimeEdit_date(const QDateTimeEdit* self);
QTime* QDateTimeEdit_time(const QDateTimeEdit* self);
QCalendar* QDateTimeEdit_calendar(const QDateTimeEdit* self);
void QDateTimeEdit_setCalendar(QDateTimeEdit* self, QCalendar* calendar);
QDateTime* QDateTimeEdit_minimumDateTime(const QDateTimeEdit* self);
void QDateTimeEdit_clearMinimumDateTime(QDateTimeEdit* self);
void QDateTimeEdit_setMinimumDateTime(QDateTimeEdit* self, QDateTime* dt);
QDateTime* QDateTimeEdit_maximumDateTime(const QDateTimeEdit* self);
void QDateTimeEdit_clearMaximumDateTime(QDateTimeEdit* self);
void QDateTimeEdit_setMaximumDateTime(QDateTimeEdit* self, QDateTime* dt);
void QDateTimeEdit_setDateTimeRange(QDateTimeEdit* self, QDateTime* min, QDateTime* max);
QDate* QDateTimeEdit_minimumDate(const QDateTimeEdit* self);
void QDateTimeEdit_setMinimumDate(QDateTimeEdit* self, QDate* min);
void QDateTimeEdit_clearMinimumDate(QDateTimeEdit* self);
QDate* QDateTimeEdit_maximumDate(const QDateTimeEdit* self);
void QDateTimeEdit_setMaximumDate(QDateTimeEdit* self, QDate* max);
void QDateTimeEdit_clearMaximumDate(QDateTimeEdit* self);
void QDateTimeEdit_setDateRange(QDateTimeEdit* self, QDate* min, QDate* max);
QTime* QDateTimeEdit_minimumTime(const QDateTimeEdit* self);
void QDateTimeEdit_setMinimumTime(QDateTimeEdit* self, QTime* min);
void QDateTimeEdit_clearMinimumTime(QDateTimeEdit* self);
QTime* QDateTimeEdit_maximumTime(const QDateTimeEdit* self);
void QDateTimeEdit_setMaximumTime(QDateTimeEdit* self, QTime* max);
void QDateTimeEdit_clearMaximumTime(QDateTimeEdit* self);
void QDateTimeEdit_setTimeRange(QDateTimeEdit* self, QTime* min, QTime* max);
int QDateTimeEdit_displayedSections(const QDateTimeEdit* self);
int QDateTimeEdit_currentSection(const QDateTimeEdit* self);
int QDateTimeEdit_sectionAt(const QDateTimeEdit* self, int index);
void QDateTimeEdit_setCurrentSection(QDateTimeEdit* self, int section);
int QDateTimeEdit_currentSectionIndex(const QDateTimeEdit* self);
void QDateTimeEdit_setCurrentSectionIndex(QDateTimeEdit* self, int index);
QCalendarWidget* QDateTimeEdit_calendarWidget(const QDateTimeEdit* self);
void QDateTimeEdit_setCalendarWidget(QDateTimeEdit* self, QCalendarWidget* calendarWidget);
int QDateTimeEdit_sectionCount(const QDateTimeEdit* self);
void QDateTimeEdit_setSelectedSection(QDateTimeEdit* self, int section);
struct miqt_string QDateTimeEdit_sectionText(const QDateTimeEdit* self, int section);
struct miqt_string QDateTimeEdit_displayFormat(const QDateTimeEdit* self);
void QDateTimeEdit_setDisplayFormat(QDateTimeEdit* self, struct miqt_string format);
bool QDateTimeEdit_calendarPopup(const QDateTimeEdit* self);
void QDateTimeEdit_setCalendarPopup(QDateTimeEdit* self, bool enable);
int QDateTimeEdit_timeSpec(const QDateTimeEdit* self);
void QDateTimeEdit_setTimeSpec(QDateTimeEdit* self, int spec);
QSize* QDateTimeEdit_sizeHint(const QDateTimeEdit* self);
void QDateTimeEdit_clear(QDateTimeEdit* self);
void QDateTimeEdit_stepBy(QDateTimeEdit* self, int steps);
bool QDateTimeEdit_event(QDateTimeEdit* self, QEvent* event);
void QDateTimeEdit_dateTimeChanged(QDateTimeEdit* self, QDateTime* dateTime);
void QDateTimeEdit_connect_dateTimeChanged(QDateTimeEdit* self, intptr_t slot);
void QDateTimeEdit_timeChanged(QDateTimeEdit* self, QTime* time);
void QDateTimeEdit_connect_timeChanged(QDateTimeEdit* self, intptr_t slot);
void QDateTimeEdit_dateChanged(QDateTimeEdit* self, QDate* date);
void QDateTimeEdit_connect_dateChanged(QDateTimeEdit* self, intptr_t slot);
void QDateTimeEdit_setDateTime(QDateTimeEdit* self, QDateTime* dateTime);
void QDateTimeEdit_setDate(QDateTimeEdit* self, QDate* date);
void QDateTimeEdit_setTime(QDateTimeEdit* self, QTime* time);
struct miqt_string QDateTimeEdit_tr2(const char* s, const char* c);
struct miqt_string QDateTimeEdit_tr3(const char* s, const char* c, int n);
bool QDateTimeEdit_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QDateTimeEdit_virtualbase_metaObject(const void* self);
bool QDateTimeEdit_override_virtual_metacast(void* self, intptr_t slot);
void* QDateTimeEdit_virtualbase_metacast(void* self, const char* param1);
bool QDateTimeEdit_override_virtual_metacall(void* self, intptr_t slot);
int QDateTimeEdit_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QDateTimeEdit_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QDateTimeEdit_virtualbase_sizeHint(const void* self);
bool QDateTimeEdit_override_virtual_clear(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_clear(void* self);
bool QDateTimeEdit_override_virtual_stepBy(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_stepBy(void* self, int steps);
bool QDateTimeEdit_override_virtual_event(void* self, intptr_t slot);
bool QDateTimeEdit_virtualbase_event(void* self, QEvent* event);
bool QDateTimeEdit_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QDateTimeEdit_override_virtual_wheelEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QDateTimeEdit_override_virtual_focusInEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QDateTimeEdit_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QDateTimeEdit_virtualbase_focusNextPrevChild(void* self, bool next);
bool QDateTimeEdit_override_virtual_validate(void* self, intptr_t slot);
int QDateTimeEdit_virtualbase_validate(const void* self, struct miqt_string input, int* pos);
bool QDateTimeEdit_override_virtual_fixup(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_fixup(const void* self, struct miqt_string input);
bool QDateTimeEdit_override_virtual_dateTimeFromText(void* self, intptr_t slot);
QDateTime* QDateTimeEdit_virtualbase_dateTimeFromText(const void* self, struct miqt_string text);
bool QDateTimeEdit_override_virtual_textFromDateTime(void* self, intptr_t slot);
struct miqt_string QDateTimeEdit_virtualbase_textFromDateTime(const void* self, QDateTime* dt);
bool QDateTimeEdit_override_virtual_stepEnabled(void* self, intptr_t slot);
int QDateTimeEdit_virtualbase_stepEnabled(const void* self);
void QDateTimeEdit_virtualbase_mousePressEvent(void* self, QMouseEvent* event);